[tool.poetry]
name = "logger.py"
packages = [{ include = "logger" }]
version = "1.0.0"
description = "Simple logger with text and ASCII-color modes"
authors = ["Anton <piunov.doc@gmail.com>"]
license = "LICENSE.md"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
